feat: production-ready updates, env configs, docker support, and UI improvements